Fix overflow hidden issue

--- a/source/styles/components/header.css
+++ b/source/styles/components/header.css
@@ -98,6 +98,7 @@ header {
     }
 
     & .options[aria-hidden = 'false'] {
+      visibility: visible;
 
       @media (--large-min) {
         top: 60px;
